--- a/Frentend/Animal.html
+++ b/Frentend/Animal.html
@@ -83,30 +83,40 @@
         <nav class="navbar navbar-expand-sm navbar-light" style="padding-top: 0; padding-bottom: 0;">
             <div class="collapse navbar-collapse" id="navbarNav" style="margin-left: 30px;">
                
-                            <ul class=" nav nav-pills">
-                                <li class="nav-item mr-5">
-                                    <b><a class="nav-link text-white" href="#">Home</a> </b>
-                                </li>
+                <ul class=" nav nav-pills">
+                    <li class="nav-item ">
+                        <b><a class="nav-link text-white" href="#">Photos</a> </b>
+                    </li>
 
-                                <li class="nav-item mr-5">
-                                    <b> <a class="nav-link text-white" href="#">About</a> </b>
-                                </li>
-                                <li class="nav-item mr-5">
-                                    <b> <a class="nav-link text-white" href="#">Services</a></b>
-                                </li>
-                                <li class="nav-item mr-5">
-                                    <b> <a class="nav-link text-white" href="#">Contact</a></b>
-                                </li>
+                    <li class="nav-item">
+                        <b> <a class="nav-link text-white" href="#">Vector</a> </b>
+                    </li>
+                    <li class="nav-item ">
+                        <b> <a class="nav-link text-white" href="#">AI Images</a></b>
+                    </li>
+                    <li class="nav-item ">
+                        <b> <a class="nav-link text-white" href="#">Icons</a></b>
+                    </li>
+                    <li class="nav-item">
+                        <b> <a class="nav-link text-white" href="#">3D</a></b>
+                    </li>
+                    <li class="nav-item">
+                        <b> <a class="nav-link text-white" href="#">PSD</a></b>
+                    </li>
+                    <li class="nav-item">
+                        <b> <a class="nav-link text-white" href="#">Fonts</a></b>
+                    </li>
 
-                            </ul>
+                </ul>
+
 
                             <ul class=" nav nav-pills ml-auto">
 
                                 <li class="nav-item mr-5">
-                                    <b> <a class="nav-link text-white  " href="#">Login</a></b>
+                                    <b> <a class="nav-link text-white  " href="SignUp.html">Sign Up</a></b>
                                 </li>
                                 <li class="nav-item mr-5">
-                                    <b> <a class="nav-link text-white" href="#">Sign In</a></b>
+                                    <b> <a class="nav-link text-white" href="SignIn.Html">Sign In</a></b>
                                 </li>
 
                             </ul>
