--- a/Frentend/index.html
+++ b/Frentend/index.html
@@ -169,7 +169,7 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class=" nav nav-pills">
                                     <li class="nav-item ">
-                                        <b><a class="nav-link text-white" href="#">Photos</a> </b>
+                                        <b><a class="nav-link text-white" id="photos" href="#">Photos</a> </b>   
                                     </li>
 
                                     <li class="nav-item">
@@ -196,7 +196,7 @@
                                 <ul class=" nav nav-pills ml-auto">
 
                                     <li class="nav-item ">
-                                        <b> <a class="nav-link text-white  " href="#">Login</a></b>
+                                        <b> <a class="nav-link text-white  " href="SignUp.html">Sign Up</a></b>
                                     </li>
                                     <li class="nav-item ">
                                         <b> <a class="nav-link text-white" href="SignIn.html">Sign In</a></b>
@@ -209,6 +209,9 @@
 
                 </div>
             </div>
+
+
+           
             </br>
             </br>
             </br>
@@ -373,6 +376,26 @@
         </div>
     </div>
 
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- Modal content goes here -->
+                    <p>This is the modal content. You can customize it as needed.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
@@ -449,6 +472,17 @@
                 }
             });
         });
+
+
+        $(document).ready(function() {
+    // Show modal on hover
+    $("#photos").on('mouseenter', function() {
+            $("#myModal").modal("show");
+        }).on('mouseleave', function() {
+            // Hide modal when the mouse leaves
+            $("#myModal").modal("hide");
+        });
+});
 
     </script>
 
